tests/build/cases/widget/invalid_path_to_property_in_when1.stderr
error[E0433]: failed to resolve: could not find `is_pressed` in `properties`
  --> cases/widget/invalid_path_to_property_in_when1.rs:12:37
   |
12 |         when *#zero_ui::properties::is_pressed {
   |                                     ^^^^^^^^^^ could not find `is_pressed` in `properties`

error[E0433]: failed to resolve: could not find `is_pressed` in `properties`
  --> cases/widget/invalid_path_to_property_in_when1.rs:12:37
   |
12 |         when *#zero_ui::properties::is_pressed {
   |                                     ^^^^^^^^^^ could not find `is_pressed` in `properties`
   |
help: consider importing this struct
   |
5  |     use zero_ui::prelude::is_pressed;
   |
help: if you import `is_pressed`, refer to it directly
   |
12 -         when *#zero_ui::properties::is_pressed {
12 +         when *#is_pressed {
   |
